2017-01-04         Arnold Robbins        <arnold@skeeve.com>

	Trade space for time for programs that toggle IGNORECASE a lot.
	Brings 25% to 39% speedup.  NODE does not actually grow in size.

	* awk.h (NODE::preg): Now an array of size two.
	[CASE]: Flag no longer needed, so removed.
	(IGNORECASE): Change type from int to bool.
	* awkgram.y (make_regnode): Build two copies of the compiled regexp,
	one without ignorecase, and one with.
	* io.c (RS_re): Array replacing RS_re_yes_case and RS_re_no_case.
	(set_RS): Use RS_re[IGNORECASE] as appropriate. Free and recompute
	as needed.
	* main.c (IGNORECASE): Change type from int to bool.
	* re.c (re_update): Simplify the code. No need to check CASE flag
	any longer. Recompute only if text of regexp changed.
	* symbol.c (free_bc_internal): Adjust to free both elements of
	m_re_reg.

2017-01-18         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* interpret.h (r_interpret): Increase robustness of the optimization
	logic in Op_assign_concat -- check that the node has MALLOC set,
	and make sure to wipe all flags other than MALLOC, STRING, STRCUR,
	and possibly WSTRCUR. Use STFMT_UNUSED define.

2017-01-15         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* interpret.h (r_interpret): Fix bug in Op_assign_concat reported
	on Cygwin mailing list. The string concatenation optimization was
	not updating the node correctly by setting STRING and STRCUR flags
	and setting stfmt.

2017-01-04         Arnold Robbins        <arnold@skeeve.com>

	* config.guess, config.sub, compile, depcomp: Sync from latest
	in GNULIB.

2016-12-27         Juergen Kahrs         <Juergen.Kahrs@googlemail.com>

	* CMakeLists.txt: Updated after adding support library.

2016-12-23         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac (GNUPG_CHECK_MPFR): Don't call on PowerPC
	Macintosh.  C99 and the last version of MPFR that works on
	that platform don't get along. Sigh.
